--- a/manifest.json
+++ b/manifest.json
@@ -4,13 +4,13 @@
   "version": "1.0",
   "theme": {
     "colors" : {
-      "frame" : [29, 32, 33],
-      "frame_inactive" : [29, 32, 33],
-      "frame_incognito" : [167, 152, 133],
-      "frame_incognito_inactive" : [212, 195, 163],
-      "toolbar" : [60, 56, 55],
-      "tab_text" : [251, 241, 201],
-      "tab_background_text" : [145, 131, 117],
+      "frame" : [18, 16, 18],
+      "frame_inactive" : [18, 16, 18],
+      "frame_incognito" : [28, 27, 34],
+      "frame_incognito_inactive" : [28, 27, 34],
+      "toolbar" : [18, 16, 18],
+      "tab_text" : [198,180,191],
+      "tab_background_text" : [141,128,136],
       "bookmark_text" : [251, 241, 201]
     }
   }
