--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
-  "name": "gruvbox theme",
-  "version": "1.0",
+  "name": "gruvbox pink theme",
+  "version": "1.2",
   "theme": {
     "colors" : {
       "frame" : [18, 16, 18],
